hphp/hack/test/typecheck/array/disallow_darray_with_int_keys_where_vect_like_array_is_required.php.exp
File "disallow_darray_with_int_keys_where_vect_like_array_is_required.php", line 16, characters 10-31:
Invalid return type (Typing[4110])
  File "disallow_darray_with_int_keys_where_vect_like_array_is_required.php", line 15, characters 18-31:
  Expected `vec<string>`
  File "disallow_darray_with_int_keys_where_vect_like_array_is_required.php", line 16, characters 10-31:
  But got `dict<int, string>` because legacy arrays have been unified with Hack arrays
